tests/samples/extends-unexpected-child-block/template.blate
// error: extends unexpected child block
{@extends './path.to.file.blate' context}
	{@slot title} Title {/slot}
	{@if title} Title {/if}
{/extends}